[tool.poetry]
name = "colours"
version = "0.1.0"
description = ""
authors = ["KatKmiotek <katarzyna.kmiotek@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.6"
termcolor = "^1.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
